the code matches the theory

--- a/sheet-01/solution.tex
+++ b/sheet-01/solution.tex
@@ -233,7 +233,7 @@ which, in the limit, converges to zero:
     \lim_{N\rightarrow \infty} \var(\hat{X}(N)) = \lim_{N\rightarrow \infty} \frac{1}{4N+8} = 0
 \end{align*}
 
-As the convergence rate of $\var(\hat{X}(N))$ is faster than $\var(\bar{X}(N))$, and that both have the same (correct) expectation, we can conclude that $\hat{X}(N)$ has the better variance.
+As the convergence rate of $\var(\hat{X}(N))$ is slower than $\var(\bar{X}(N))$, and that both have the same (correct) expectation, we can conclude that $\bar{X}(N)$ has the better variance, i.e., it is better to estimate the mean of a uniform distribution by using the mean of the samples instead of the median.
 
 
 \end{document}
